Potential fix for upper shadow on inputs on mobile
https://stackoverflow.com/a/8199147

--- a/app/javascript/src/tailwind/components/form.css
+++ b/app/javascript/src/tailwind/components/form.css
@@ -2,6 +2,7 @@ label { @apply block text-sm font-bold mb-2; }
 
 input:not([type="submit"]):not([type="checkbox"]) {
   @apply bg-grey-lighter appearance-none border-2 border-grey-lighter rounded w-full py-2 px-4 text-grey-darker leading-tight;
+  -webkit-appearance: none;
 
   &:focus {
     @apply outline-none bg-white border-primary;
